--- a/Index.html
+++ b/Index.html
@@ -13,8 +13,21 @@
      <!-- end onsen framework -->
 
     <title>D20 Stat Sheet</title>
+    
 </head>
 <body>
-    
+    <!-- character description start -->
+    <!-- top toolbar -->
+    <!-- end character description -->
+
+    <!-- Stats start -->
+    <!-- left side -->
+    <!-- end Stats -->
+
+    <!-- Skill start -->
+    <!-- Skills (right side) -->
+
+    <!-- end Skill -->
+
 </body>
 </html>
